added optimize scipt

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Prashanth Sams</title>
         <link rel="stylesheet" href="./style.css">
+        <script src="https://www.googleoptimize.com/optimize.js?id=GTM-MB4R23Z"></script>
         
     </head>
     <body>
