added optimize scipt

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,16 @@
         <title>Prashanth Sams</title>
         <link rel="stylesheet" href="./style.css">
         <script src="https://www.googleoptimize.com/optimize.js?id=GTM-MB4R23Z"></script>
-        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47254129-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-47254129-1');
+        </script>
+
     </head>
     <body>
         <h1 class='center font'>Hello!</h1>
