--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,24 @@
 
             gtag('config', 'UA-47254129-1');
         </script>
+        <script async src="//www.googletagmanager.com/gtm.js?id=GTM-WB7RCGW"></script>
 
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-WB7RCGW');</script>
+        <!-- End Google Tag Manager -->
     </head>
     <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript>
+            <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WB7RCGW"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        </noscript>
+        <!-- End Google Tag Manager (noscript) -->
+
         <h1 class='center font'>Hello!</h1>
         <div class='center' id='body'>
             <p class='paraFont'>A/B testing variants</p>
