--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,8 @@
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-
-            gtag('config', 'UA-47254129-1');
         </script>
-        <script async src="//www.googletagmanager.com/gtm.js?id=GTM-WB7RCGW"></script>
+        <!-- <script async src="//www.googletagmanager.com/gtm.js?id=GTM-WB7RCGW"></script> -->
 
         <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
