--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,8 @@
             <input class='buttonFont' id='dont-click' type="button" onclick="location.href='#';" value="Don't click"/>
             <input class='buttonFont' id='skip' type="button" onclick="location.href='#';" value='>> skip'/>
         </div>
+        <div class='center' id='body'>
+            <a href="#" style="display: block">Link here</a>
+        </div>
     </body>
 </html>
