--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Prashanth Sams</title>
         <link rel="stylesheet" href="./style.css">
-        <script src="https://www.googleoptimize.com/optimize.js?id=GTM-MB4R23Z"></script>
+        <!-- <script src="https://www.googleoptimize.com/optimize.js?id=GTM-MB4R23Z"></script> -->
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47254129-1"></script>
+        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47254129-1"></script> -->
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
+            
+            gtag('config', 'UA-47254129-1');
         </script>
 
         <!-- Google Tag Manager -->
