--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Prashanth Sams</title>
         <link rel="stylesheet" href="./style.css">
-        <!-- <script src="https://www.googleoptimize.com/optimize.js?id=GTM-MB4R23Z"></script> -->
+        <script src="https://www.googleoptimize.com/optimize.js?id=GTM-MB4R23Z"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47254129-1"></script> -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47254129-1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
@@ -15,6 +15,7 @@
             
             gtag('config', 'UA-47254129-1');
         </script>
+        <script async src="//www.googletagmanager.com/gtm.js?id=GTM-WB7RCGW"></script>
 
         <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
